src/test/ui/macros/macro-local-data-key-priv.stderr
error[E0603]: constant `baz` is private
  --> $DIR/macro-local-data-key-priv.rs:8:10
   |
LL |     bar::baz.with(|_| ());
   |          ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0603`.
